# gif2tgsticker

./: .gitignore  README.md  gif2tgsticker.py  gif2tgsticker.spec  pyproject.toml
