[tool.poetry]
name = "gif2tgsticker"
version = "0.0.3"
description = ""
authors = ["ReallyiAmGhost <really@iamghost.kr>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tkinterdnd2 = "^0.3.0"
ffmpeg-python = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
